--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -16,18 +16,12 @@ excerpt: MEVN교과서 (1)
 
 또한, 실시간 데이터 시각화 프로그램뿐만 아니라 작가소개플랫폼제작을 통해 보다 대중적인 웹 애플리케이션을 만드는데 도움이 되고자했습니다. 
 
-## 할일 목록
- - [x] 함수형 프로그래밍 설명 다듬기 
- - [x] MongoDB CRUD 예제 다듬기
- - [x] topology 설명 추가
- - [ ] mongodb aggregate, mapreduce 예제 코드 수정 
- - [ ] 커링 + 파이프 설명 부분 좀 더 쉽게 다듬기 
+## 할일 목록   
  - [ ] bounds 그림 추가
  - [ ] projection deep dive 추가
  - [ ] svg.call 부분 deep dive(다른 돔 Q : 추가)
- - [ ] 파이제너레이터 설명 추가 
- - [ ] sensor chart line 예제 tooltip 및 색깔 커스텀 그리고 지도 예제, 다른 것들 다 box화
- 
+ - [ ] aggregate, mapReduce 예제 추가
+ - [ ] 파이제너레이터 설명 추가  
  
 # 지은이의 말
 이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징 그리고 nginX까지 알아보게 될 것입니다. 이를 통해 실전적인 실력을 기르고자 하는 개발자들에게 심층적인 도움이 되었으면 합니다. 
@@ -114,16 +108,14 @@ excerpt: MEVN교과서 (1)
 - 실시간 통신 : websocket방식과 polling 방식 비교 
 - 센서생성 서버 구축 
  
-### 4.5  실시간 센서시각화사이트 : 클라이언트와 디자인 
-- Vuex 및 프로젝트 뼈대 구축
-- 디자인 구축
+### 4.5  실시간 센서시각화사이트 : 클라이언트
+- Vuex 및 프로젝트 뼈대 구축 
 
 ### 4.6  실시간 센서시각화사이트 : 차트 컴포넌트 
-- 차트 컴포넌트제작 
-- tooltip 이벤트 
+- 차트 컴포넌트제작  
 
-### 4.7  실시간 센서시각화사이트 : 모니터링 모듈 
-- CPU, 하드웨어 모니터링 모듈 제작
+### 4.7  실시간 센서시각화사이트 : socketio플러그인
+- socketio플러그인제작
 
 ## 5. 미술작가소개플랫폼 제작
 ### 5.1 아키텍처
