--- a/_posts/2019-06-30-MEVN교과서-(5).md
+++ b/_posts/2019-06-30-MEVN교과서-(5).md
@@ -588,7 +588,7 @@ i(1.0); // 20
 이 아이콘은 [아이콘링크](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/아마존아이콘.ppt) 를 통해 바로 다운 받을 수 있습니다. 참고하시길 바랍니다. 
  
 #### 4.4.2 실시간 통신 : websocket방식과 polling 방식 비교  
-실시간 통신이란 보통 Websocket으로 통신한다는 것은 HTTP를 기반으로 설정된 **ws프로토콜**을 통해 양방향통신을 하는 것을 말합니다.WebSocket 객체를 통해 양방향통신을 하는데 이 객체는 서버와의 WebSocket 연결을 생성하고 관리할 수 있는 API 들을 제공하며 가장 유명한 라이브러리로는 Socket.io가 있습니다. 하지만 오래된 브라우저의 경우(IE8이하) 미지원되므로 이 때는 websocket이 아닌 polling 방식, 주기적인 요청 또는 long polling, RESPONSE 받게 되면 REQUEST를 다시 요청(무한 재귀함수)로 구현해야 합니다. 
+실시간 통신이란 보통 Websocket으로 통신한다는 것은 HTTP를 기반으로 설정된 **ws프로토콜**을 통해 양방향통신을 하는 것을 말합니다.WebSocket 객체를 통해 양방향통신을 하는데 이 객체는 서버와의 WebSocket 연결을 생성하고 관리할 수 있는 API 들을 제공하며 가장 유명한 라이브러리로는 Socket.io가 있습니다. 하지만 오래된 브라우저의 경우(IE9이하) [caniuse-websocket](https://caniuse.com/#search=websocket)미지원되므로 이 때는 websocket이 아닌 polling 방식, 주기적인 요청 또는 long polling, RESPONSE 받게 되면 REQUEST를 다시 요청(무한 재귀함수)로 구현해야 합니다. 
 
  > Q : Ajax랑 다른점이 뭔가요? 
  
@@ -608,8 +608,8 @@ id,time,temp,wv,humi
 먼저 cnt를 이용한 예제입니다. 
 
 일단 먼저 유저를 추가합니다. 
-```js
-db.createUser({  
+```shell
+ > db.createUser({  
  user:"dabin",
  pwd:"dabin12010",
  roles:[  
@@ -625,20 +625,21 @@ db.createUser({
 ```
 다빈, dabin이라는 이름을 가진 user를 추가했습니다. 이 때 sensor라는 DB를 만들지 않았다면 test라는 DB에 자동적으로 user가 추가가 됩니다.  
 
- > sensor DB 생성하기
+ > 참고 : sensor DB 생성하기
  
-0. mongo shell을 구동합니다.
-1. sensor데이타베이스로 이동 `use sensor` 
-2. 데이타베이스확인 : `show dbs` 아직 sensor가 생성되지 않았습니다.
-3. 데이타베이스 생성, db.sensor.insert({"kundol" : 1})
-4. 데이타베이스확인 : `show dbs` sensor DB가 생성되었습니다!
+ ---- 
+
+1. mongo shell을 구동합니다.
+2. sensor데이타베이스로 이동 `use sensor` 
+3. 데이타베이스확인 : `show dbs` 아직 sensor가 생성되지 않았습니다.
+4. 데이타베이스 생성, db.sensor.insert({"kundol" : 1})
+5. 데이타베이스확인 : `show dbs` sensor DB가 생성되었습니다!
+
+ ---- 
 
 이제 앞서 설명한 createUser을 하면 sensor에 다빈이가 추가된 것을 볼 수 있습니다. `db.getUsers()`로 유저를 확인할 수 있습니다.
 
-socket으로 conenction또는 reconnection이 될 때 유니크한 id(string)을 가집니다. 이를 이용해 연결된 user의 수 등의 로직을 구현할 수 있습니다. 이외에 클라이언트에서 지정해준 인자로 서버에서 관리할 수 있습니다.  
-
-주석을 달 때는 첫번째 문자는 대문자로 해줘야 합니다.
-서버에 들어가 node server.js로 서버를 구동시키고 클라이언트에서는 npm run serve를 통해 테스트 서버를 구동시킵니다.
+자 이제 본격적으로 센서 서버를 만들어보겠습니다.  
 #### MEVN/4장/sensor/서버/server.js
 ```js
 const express = require('express')
@@ -651,52 +652,77 @@ const sensorController = require('./controller/sensor')
 const path    = require('path')  
 const _path   = path.join(__dirname, '..', './dist')  
 const PORT    = 12010 
-const mongoose = require('mongoose')
-//계정 설정 MongoDB 계정 보안 설정 이야기 
+const mongoose = require('mongoose') 
 const USER = 'dabin'
 const PWD = 'dabin12010'
 const HOST = 'localhost:27017'
 const DB = 'sensor'
-const mongodbURL = `mongodb://${USER}:${PWD}@${HOST}/${DB}`
-mongoose.connect(mongodbURL, {useNewUrlParser: true}); 
-mongoose.set('useFindAndModify', false);
+const mongodbURL = `mongodb://${USER}:${PWD}@${HOST}/${DB}`  // -- (1)
 let userList = [];
 const main = async()=>{
   //app 객체 설정 
   app.use('/', express.static(_path))  
   app.use(cors()) 
+  // MongoDB connect 설정
   mongoose.connect(mongodbURL, {useNewUrlParser: true}) 
   .then(() =>  console.log('connection succesful'))
   .catch((err) => console.error(err)) 
+  mongoose.set('useFindAndModify', false);
+  let toIdx = 10; 
   //io 객체 설정 
-  io.on('connection', (socket) =>{  
+  const jsonArray = await util.readCSV();   // -- (2)
+  io.on('connection', async (socket) =>{  
     console.log(`User connected :: ${util._date()} ID : ${socket.id}`)   
-    userList.push(socket.id) 
-    socket.on('chat message', (msg) =>{
-      console.log('message: ' + msg);
-    }); 
+    userList.push(socket.id)  // -- (3)
     socket.on('disconnect', () => {  
       console.log(`User disconnected :: ${util._date()} ID : ${socket.id}`)  
       userList.splice(userList.indexOf(socket.id),1); 
-    });  
-  }); 
-  const jsonArray = await util.readCSV(); 
-  setInterval(async () => {   
-    const sensor = await sensorController.emitSensorAndSave(io, jsonArray); 
-    console.log(`Emit user Current Sensor And Save DB :: ${util._date()} ${JSON.stringify(sensor)}`) 
-  }, 10 * 1000);   
-
-  http.listen(PORT, ()=> console.log(`센서서버가 시작됩니다. http://127.0.0.1:${PORT} :: ${util._date()}`));
+    });       
+    const sensor_first = await sensorController.emitSensorAndSaveStart(io, jsonArray, toIdx);  // -- (4)
+    console.log(`Send to user Current Sensor And Save DB in first :: ${util._date()} ${sensor_first}`)    
+  });   
+  //센서데이타는 항상 받자 마자 emit을 해줘야 한다. 그 부분을 재현 
+  const sensor = await sensorController.emitSensorAndSave(io, jsonArray);   // -- (5)
+  toIdx = sensor.idx; 
+  setInterval(async () => {    
+    const sensor = await sensorController.emitSensorAndSave(io, jsonArray);  
+    toIdx = sensor.idx;  
+    console.log(`Send to user Current Sensor And Save DB :: ${util._date()} ${JSON.stringify(sensor)}`) 
+  }, 1 * 1000); 
+  http.listen(PORT, ()=> console.log(`센서서버가 시작됩니다. http://127.0.0.1:${PORT} :: ${util._date()}`)); // -- (6)
 }
+main();   
+``` 
+server.js입니다. 고작 50줄밖에 되지 않습니다. 이렇게 main서버는 항상 작게 만들고 모듈화를 시키는 것이 중요합니다. 이 서버는 단순한 센서 서버라서 sensorController라는 컨트롤러밖에 없지만 컨트롤러가 많아진다면 이 모듈화 방법은 정말 효율적이게 될 것입니다. 각각의 역할을 지닌 로직 별로 모듈화를 시키는 것은 항상 중요합니다. 또한, 주석을 달 때 첫번째 문자는 반드시 대문자로 해주어야 합니다. 
 
-main();  
+
+각각의 코드 설명입니다. 
+1) 아까 만들었던 계정을 통해 mongoDB에 연결 합니다. DB는 sensor를 씁니다. 
+2) 센서서버 자료를 읽어 옵니다. 자료는 2019년 8월 2일 여름의 강동구 기상 센서 자료입니다. 
+3) connection되었을 때의 이벤트입니다. 단말기(유저)가 연결되었을 때 userList에 넣어서 관리를 합니다. class로도 할 수 있습니다. 간단하게 배열로 구축했습니다.
+4) 처음에 connection되었을 때 지금의 toIdx까지 센서자료를 전달합니다. 예를 들어 지금 센서생성서버가 13의 idx를 가진 센서를 생성한다면 3부터 13까지의 10개의 센서 자료를 보내서 기본 차트를 그리도록 합니다. 
+5) 센서생성서버는 항상 코든 유저에게 io.emit 이벤트를 통해 센서를 보내는 부분입니다. 
+6) 서버를 생성하는 부분입니다. 보통 socket.io 와 실시간 통신을 하는 http 서버를 만들 때 이렇게 서버를 구축합니다.
+
+```js
+const http    = require("http").createServer(app)
+const io      = require('socket.io')(http)
+...
+http.listen(PORT, ()=> console.log(`센서서버가 시작됩니다. http://127.0.0.1:${PORT} :: ${util._date()}`));
+
 ``` 
 
-#### MEVN/4장/sensor/서버/controller/senser.js
+
+![toIdx설명](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4장_toIdx.png)
+4번에 대한 설명을 하기 위한 그림입니다. 
+센서는 1초마다 생성이 되는데 그 때 유저가 들어왔을 때 toIdx까지 보내기만 하면 쉽게 그 이전의 초기 센서값들을 보낼 수 있습니다. 
+  
+#### MEVN/4장/sensor/서버/models/senser.js
 ```js
 const Sensor = require('../models/sensor.js'); 
-const _ = require("fxjs/Strict"); 
-const save = async(data)=> {
+const _ = require("fxjs/Strict");  
+const start_CNT= 10; 
+const save = async(data)=> { // --- (1)
     const ret = await Sensor.findOneAndUpdate({
         "cnt" : {
             $eq : data.cnt
@@ -711,16 +737,18 @@ const save = async(data)=> {
     ).lean()
     return ret;  
 };
-// 전역변수로 증가시키는 setNextData
-let cnt = 0;   
-const setType = data =>{
-    for(let key in data){
+
+const setType = data =>{ 
+    for(let key in data){ // --- (2)
         if(key == 'time')data[key] = new Date(data[key])
         else data[key] = Number(data[key])
     } 
     return data; 
 }
-const setNextData = (jsonArray) =>{
+
+// 전역변수로 증가시키는 setNextData
+let cnt = start_CNT;   
+const setNextData = (jsonArray) =>{ 
     const l = jsonArray.length;    
     let data = jsonArray[cnt];  
     data = {cnt : cnt, ...setType(data)} 
@@ -728,107 +756,75 @@ const setNextData = (jsonArray) =>{
     return data;    
 }  
 
-// 이터레이터로도 만들 수 있다. 
+// 이터레이터로 만드는 cnt
 function *setCntIterator() {  
-    let cnt = 0; 
+    let cnt = start_CNT;   
     while (true) {
         yield cnt;
         cnt = (cnt + 1);  
     }
-} 
-
+}  
 const iterator = setCntIterator(); 
 const setNextDataIterator = (jsonArray) =>{
     const l = jsonArray.length;      
-    const cnt = _.go(
-        iterator, 
-        _.take(1));
-    let data = jsonArray[cnt % l]; 
-    data = {cnt : cnt, ...setType(data)};
+    const cnt = iterator.next().value;   
+    const idx = cnt % l; 
+    let data = jsonArray[idx];   
+    data = {idx : idx, ...setType(data)};
     return data;    
 }
 
-
-//testModule
-exports.emitSensorAndSave = (io, jsonArray)=>{
-    return new Promise((resolve, reject) =>{
-        const data = setNextData(jsonArray) 
-        //const data = setNextDataIterator(jsonArray) 
-        io.emit(data); 
-        save(data); 
-        resolve(data)
-    }) 
-} 
-```
-
-#### MEVN/4장/sensor/서버/models/senser.js
-```js
-const Sensor = require('../models/sensor.js'); 
-const _ = require("fxjs/Strict"); 
-const save = async(data)=> {
-    const ret = await Sensor.findOneAndUpdate({
-        "cnt" : {
-            $eq : data.cnt
-        }}, {
-            $set : data
-        }, {
-            upsert: true, 
-            multi: true, 
-            new : true, 
-            setDefaultsOnInsert: true
-        }
-    ).lean()
-    return ret;  
-}
-
-// 전역변수로 증가시키는 setNextData
-let cnt = 0;   
-const setType = data =>{
-    for(let key in data){
-        if(key == 'time')data[key] = new Date(data[key])
-        else data[key] = Number(data[key])
-    } 
-    return data; 
-}
-const setNextData = (jsonArray) =>{
-    const l = jsonArray.length;    
-    let data = jsonArray[cnt];  
-    data = {cnt : cnt, ...setType(data)} 
-    cnt = (cnt + 1) % l; 
-    return data;    
+//slice를 이용한 take from to
+const takeFromTo = (from, to, a) =>{
+    if(to < from)return [...a.slice(from), ...a.slice(0, to + 1)] 
+    else return a.slice(from, to + 1)
 }  
 
-// 이터레이터예제
-function *setCntIterator() {  
-    let cnt = 0; 
+//이터레이터를 이용한 take from to
+function *setFromIterator(from) {  
+    let cnt = from;  
     while (true) {
         yield cnt;
         cnt = (cnt + 1);  
     }
+}    
+const takeFromToIterator = (from, to, sensors)=>{ 
+    const l = sensors.length;   
+    const cnt = to < from ? l - (from - to - 1) :  to - from  + 1
+    return _.go( // --- (3)
+        setFromIterator(from), 
+        _.take(cnt), 
+        _.map(e => sensors[e % l])
+    )
 } 
-
-const iterator = setCntIterator(); 
-const setNextDataIterator = (jsonArray) =>{
-    const l = jsonArray.length;      
-    const cnt = _.go(
-        iterator, 
-        _.take(1));
-    let data = jsonArray[cnt % l]; 
-    data = {cnt : cnt, ...setType(data)};
-    return data;    
-}
 
 exports.emitSensorAndSave = (io, jsonArray)=>{
     return new Promise((resolve, reject) =>{
-        const data = setNextData(jsonArray) 
-        //const data = setNextDataIterator(jsonArray) 
-        io.emit(data); 
+        //const data = setNextData(jsonArray) 
+        const data = setNextDataIterator(jsonArray)    // --- (4)
+        io.emit("sensor", data); 
         save(data); 
         resolve(data)
     }) 
 } 
-
+exports.emitSensorAndSaveStart = (io, jsonArray, toIdx)=>{
+    const l = jsonArray.length
+    const from = toIdx - start_CNT < 0 ? (toIdx - start_CNT + l) % l : toIdx - start_CNT
+    const to = toIdx  
+    return new Promise((resolve, reject) =>{  
+        let data = takeFromToIterator(from, to, jsonArray)  
+        io.emit("sensor", data); 
+        save(data); 
+        resolve(data)
+    }) 
+} 
 ```
+센서 생성서버의 중심이 되는 sensor.js입니다. 코드별로 설명하겠습니다. 
+1) save입니다. 데이타를 받아서  "cnt" :{ $eq : data.cnt} cnt에 맞는 것을 찾아서  $set : data, data를 udpate 시킵니다..
+2) for in을 객체에다 쓰면 객체의 모든 key와 value들에 대한 로직을 구현할 수 있습니다. MongoDB에 넣기 전 스키마에 맞는 형식으로 변환해줍니다. 
+3) 배열의 요소중 from부터 to까지 끄집어내는 모듈입니다. from 부터 시작해 ` setFromIterator(from)`이 from부터 시작하는 이터레이터를 만들어서 그 from부터 `_.take(cnt)` cnt까지의 배열 idx를 뽑아냅니다. 그 후 `_.map(e => sensors[e % l])`그 idx에 맞는 센서데이타를 할당해서 그 만큼의 센서데이터들을 뽑아냅니다.  
+4) 가장 중심이 되는 `emitSensorAndSave`입니다. idx에 해당하는 센서 데이타를 뽑아 내서 `io.emit("sensor", data);` 모든 단말기에 `sensor`이벤트로 data를 보내고 `save`, MongoDB에 저장을 합니다. 그 후 `resolve(data)`를 통해 Promise문을 탈출합니다. 
+
 #### MEVN/4장/sensor/서버/util/index.js
 ```js
 const csvFilePath = '../data/20190802_강동구.csv' 
@@ -850,12 +846,23 @@ module.exports = () => {
     };
 } 
 ```
-
-그다음은 제너레이터를 이용한 예제입니다. 
-
-자 이렇게 1초마다 센서데이타가 io.emit으로 연결된 모든 단말기에 전달되는 서버를 만들었습니다. 
+서버에 전체적으로 필요한 도구들이 담겨있는 util입니다. csv 파일을 읽는 readCSV는 `csvtojson`이라는 npm 모듈이 await / async를 지원하기 때문에 await로 쉽게 구축할 수 있습니다. `const _form = date => ("00" + date).slice(-2)`을 통해 8을 08로 바꾸고 12는 그대로 12로 내버려두게 하여 아름답게 로그를 08-08 06:30 이런식으로 구축할 수 있게 했습니다. 
+ 
 
  > 참고 : socket, broadcast, io.emit 차이
+
+ ----
+
+ 실시간 통신은 아래의 표로 구분됩니다. 
+  
+| 이름 | 설명 | 사용법(socketio) | 
+|:--------|:--------|:--------|
+| public	| 1 : n - 1 통신, 보내는 유저 제외 모든 유저에게 메세지전달 | socket.broadcast.emit('이벤트이름', message) 	|
+| private	|1 : 1 통신, 특정 유저에게 메세지가 전달	|  io.to(소켓아이디).emit('이벤트이름' message) |
+| private	| 1 : 1 통신, 연결되었을 때의 socket을 통해 그 유저에게만 메세지가 전달 	| socket.emit('이벤트이름', message)	|
+| broadcast	| 1 : n 통신, 모든 유저에게 메세지가 전달 	| io.emit('이벤트이름', message)	|  
+
+ ----
 
 ### 4.5  실시간 센서시각화사이트 : 실시간통신과 디자인 
 백엔드를 구축했으니 이제 프론트엔드를 구축할 것입니다. 
@@ -863,22 +870,386 @@ module.exports = () => {
 #### 4.5.1 Vuex 및 프로젝트 뼈대 구축
 Vuex를 써야 하는 이유는 간단합니다. 컴포넌트끼리 데이터를 주고 받으려면 props, emit으로 주고 받게 되는데 프로젝트가 커진다면 데이터를 전달하고 받는 컴포넌트간의 갯수가 많아지고 체크하기도 어렵기 때문입니다. 
 중앙집중화된 어떠한 데이타들의 관리 / 어떠한 데이타들이 변환되는 것을 감시(watch)하고 싶다면 쓰는 것입니다. Vuex를 쓸 때는 비동기적인 것은 actions에 그 외 동기적인 것은 mutations에 넣어야 합니다. 그리고 state의 상태변이에 있어서는 꼭 mutations를 써야 합니다. 즉, actions에서 직접적으로 state를 수정하면 안됩니다. actions에서 mutation으로 commit을 통해 넘겨줘야 하며 mutations에서 state를 수정해야 합니다. 또한 반드시 모듈화를 해야 합니다. 
- 
 
-코드를 보면서 설명하도록 하겠습니다. 
-#### 4.5.2 디자인 구축
-이제 디자인을 좀 수정할 차례입니다. 많은 CSS 라이브러리와 프레임워크가 있지만 저는 절대 쓰지 않습니다. 왜냐하면 실력이 감소하기 때문입니다. 삼성, LG, 네이버, 다 독자적으로 만든 CSS 라이브러리나 자체 디자인으로 웹앱을 만듭니다. 간단한 프로젝트라면 추천드리지만 실력을 키우기 위해서는 스스로 CSS를 다룰줄 알아야 합니다. 네비게이션 중앙정렬, 카드효과를 구축해보겠습니다.  (반응형)
+store에 actions.js, mutations-type.js, mutations.js, state.js를 만듭니다. 
+
+#### MEVN/4장/sensor/src/store/actions.js
+```js
+export default {
+    initGetSensor({commit}, socket) { 
+        socket.on("sensor", data => commit("CHANGE_SENSOR_CHART", data)) 
+    }
+};
+```
+actions에는 비동기이벤트를 받아 commit을 통해 mutations에다가 payload를 넘기는 일을 넣으면 됩니다. 
+
+#### MEVN/4장/sensor/src/store/mutations.js
+```js
+import * as types from './mutations-type'; 
+  export default {
+    [types.CHANGE_SENSOR_CHART](state, payload) {    
+        if(!state.sensors.length){ 
+          state.sensors = payload; 
+        }else {
+          state.sensors.shift(); 
+          state.sensors.push(payload);
+        } 
+    }
+} 
+```
+mutations입니다. type에 해당하는 mutation이 담겨있습니다. 우리는 처음 10개의 센서데이타 배열을 받은 후 10개를 유지하며 새로운 데이타는 `push` 그 이전의 데이타는 shift를 통해 뺄 것입니다. 
+
+#### MEVN/4장/sensor/src/store/mutations-type.js
+```js
+export const CHANGE_SENSOR_CHART = 'CHANGE_SENSOR_CHART' 
+```
+mutations에는 수많은 mutation 함수들이 들어갑니다. 저는 actions와 mutation을 구분할 수 있게 actions의 경우는 대문자 + types를 쓰지않습니다. 
+ * 취향에 따라 actions-type를 만드는 사람들도 있습니다. 
+
+
+#### MEVN/4장/sensor/src/store/state.js 
+```js
+export default {
+    sensors : []
+}
+```
+자 state는 sensors 하나만 넣으면 끝이 납니다.   
+
+#### MEVN/4장/sensor/src/store.js  
+```js
+import Vue from 'vue'
+import Vuex from 'vuex'
+import actions from './store/actions.js'
+import mutations from './store/mutations.js'
+import state from './store/state.js'
+Vue.use(Vuex)
+
+export default new Vuex.Store({
+  state,
+  mutations,
+  actions
+})
+
+```
+그 이후 store에 이렇게 설정해 놓으면 끝입니다. 자 이렇게 vuex - store에 관한 모듈화가 끝이 났습니다. 
+
+이제부터는 config 설정입니다. 
+
+#### MEVN/4장/sensor/src/config/index.js  
+```js
+export default{
+    host : "http://127.0.0.1", 
+    port : 12010, 
+    margin : {top: 50, right: 50, bottom: 50, left: 50}, 
+    chartWidth : 300,
+    chartHeight : 400
+}
+```
+우리는 센서 차트라는 그림을 그릴 것인데 그것에 해당하는 width와 height를 config에 설정해주면 나중에 유지보수하는데 굉장히 좋습니다. 또한 센서데이타를 받아올 서버의 정보, host, port를 적어 놓습니다. 
 
 ### 4.6  실시간 센서시각화사이트 : 차트 컴포넌트 
-이제 차트를 구현해보겠습니다. 
+이제 차트를 구현해보겠습니다.    
 
-#### 4.6.1 차트 컴포넌트제작
-서버로부터 10개이상의 데이타가 들어왔을 때 차트가 그려지게 만들었습니다. 
+#### MEVN/4장/sensor/src/components/Chart.vue
+```html
+<template>
+  <div :class="'Chart Chart-' + _key">
+  </div>
+</template>
 
-#### 4.6.2 tooltip 이벤트 
-이제 툴팁을 추가해보겠습니다.  
+<script>
+  import config from '../config' // - (1)
+  import * as d3 from 'd3' // - (2)
+  const margin_value = 1;
 
-### 4.7  실시간 센서시각화사이트 : 모니터링 모듈 
-이제 이러한 차트를 응용해서 하드웨어적인 부분을 모니터링 하는 모듈을 만들어 보겠습니다. 
-#### 4.7.1 CPU, 하드웨어 모니터링 모듈 제작
-일단 하드웨어적인 상태들을 json객체로 변환해주는 좋은 npm이 있습니다. 
+  import {
+    mapState
+  } from 'vuex'
+  export default {
+    name: 'Chart',
+    props: { // - (3)
+      _key: String,
+      color: String
+    },
+    data() {
+      return {
+        svg: "",
+        xScale: "",
+        yScale: "",
+        xAxis: "",
+        yAxis: "",
+        line: ""
+      }
+    },
+    mounted() {
+      this.setAreaAndScale(this._key); // - (4)
+      let cnt = 0;
+      this.$store.subscribe((mutation, state) => {// - (5)
+        if (mutation.type === "CHANGE_SENSOR_CHART") {  
+          if (!cnt) this.initDraw(this.sensors, this._key);
+          else this.draw(this.sensors, this._key);
+          cnt = 1; 
+        }
+
+      })
+    },
+    methods: {
+      setAreaAndScale(key) {
+        this.svg = d3.select(`.Chart-${key}`).append("svg")
+          .attr("width", config.chartWidth + config.margin.left + config.margin.right)
+          .attr("height", config.chartHeight + config.margin.top + config.margin.bottom)
+          .append("g")
+          .attr("transform", `translate(${config.margin.left},${config.margin.top})`)
+        this.xScale = d3.scaleTime().range([0, config.chartWidth])
+        this.yScale = d3.scaleLinear().range([config.chartHeight, 0])
+
+        const timeFormat = d3.timeFormat("%H:%M")
+        this.xAxis = d3.axisBottom(this.xScale).tickFormat(timeFormat)
+        this.yAxis = d3.axisLeft(this.yScale)
+        this.line = d3.line().x(d => this.xScale(d.time)).y(d => this.yScale(d[key])).curve(d3.curveMonotoneX)
+
+      },
+      initDraw(data, key) { 
+        //data는 string형태로 오기 때문에 여기서 new Date 객체로 바꿔주어야 한다. 
+        data.forEach(function (d) {
+          d.time = new Date(d.time)
+        });
+        //scale에는 extent또는 0부터 max까지 할 수있다. 
+        this.xScale.domain(d3.extent(data, d => d.time))
+        //yScale.domain([0, d3.max(data, d => d.temp)])  
+        const _min = d3.min(data, d => d[key])
+        const _max = d3.max(data, d => d[key])
+        this.yScale.domain([_min - margin_value, _max + margin_value])
+
+        //data를 통해 path를 그리는데 3가지 방법이 있다. 
+        // svg.append("path").datum(data).attr("d", line)
+        // svg.append("path").data([data]).attr("d", line) 
+        this.svg.append("path")
+          .attr("d", this.line(data))
+          .attr("class", "line")
+        this.svg.append("g")
+          .attr("class", "x axis")
+          .attr("transform", `translate(0,${config.chartHeight})`)
+          .call(this.xAxis);
+
+        this.svg.append("g")
+          .attr("class", "y axis")
+          .call(this.yAxis);
+      },
+      //draw에서는 데이터 처리가 아닌 data를 통해서 차트틀 그리는 것에 대해 집중해야 한다. 
+      draw(data, key) {   
+        data.forEach(function (d) { // - (6)
+          d.time = new Date(d.time)
+        });
+
+        this.xScale.domain(d3.extent(data, d => d.time)) // - (7) 
+        const _min = d3.min(data, d => d[key])
+        const _max = d3.max(data, d => d[key])
+        this.yScale.domain([_min - margin_value, _max + margin_value])
+ 
+        var svg = d3.select(`.Chart-${key} svg`).transition();
+        svg.select(".line")  
+          .duration(750)
+          .attr("d", this.line(data));// - (8) 
+        svg.select(".x.axis")  
+          .duration(750)
+          .call(this.xAxis);
+        svg.select(".y.axis")  
+          .duration(750)
+          .call(this.yAxis);
+      }
+    },
+    computed: {
+      ...mapState([
+        'sensors'
+      ])
+    }
+  }
+</script>
+
+<style>
+  .Chart .line {
+    fill: none;
+    stroke: #f89e35;
+    stroke-width: 2px;
+  }
+  .Chart-humi .line{ 
+    stroke: #42b983; 
+  } 
+  .Chart-wv .line{ 
+    stroke: #262d3d; 
+  } 
+  div.tooltip {
+    position: absolute;
+    text-align: center;
+    padding: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    background: #f99e1a;
+    border: 0px;
+    border-radius: 8px;
+  }
+
+  .tooltip p {
+    margin: 0;
+    padding: 0;
+  }
+
+  circle {
+    fill: rgba(40, 53, 79, .95);
+  }
+</style>
+```
+ > toolip은 추후 수정예정
+
+코드를 보면서 각각 설명하겠습니다
+1)`import config from '../config'`를 통해 아까 설명했던 config를 가져와 width, height 등을 설정합니다. 
+2)`import * as d3 from 'd3'` D3는 common모듈방식과 ES6방식을 모두 지원합니다. ES6방식을 사용하여 D3를 가져옵니다.
+3)` props: { ` D3는 특정한 DOM에 svg나 다른 것들을 **붙여서** 그림을 만들어 냅니다. 이 Chart.vue는 재사용되기 때문에 예를 들어 똑같은 클래스에 붙이게 되면 그림이 겹쳐지게 됩니다. 그렇기 때문에 각각의 컴포넌트를 구분할 _key가 필요하며 각각의 컴포넌트마다 다른 색깔을 넣기 위해 color를 props로 받아옵니다. 
+4)`this.setAreaAndScale(this._key); `먼저 그림을 그릴 영역을 설정합니다. 이 때 전역변수로 설정할 수 있지만 `this.line`등으로 vue 인스턴스에 거는 이유가 있습니다. 바로 같은 화면에 component를 3개를 놓는다고 했을 때 그 컴포넌트에 전역변수를 걸어버리면 한번밖에 선언을 안하고 그 메소드가 동작할 때 line함수에 다른 값이 할당이 되게 됩니다. 즉, 컴포넌트마다 각기 다른 변수를 할당하지 못하기 때문에 각기 다른 효과를 원한다면 vue인스턴스에 할당을 해야 합니다. 
+5)`this.$store.subscribe((mutation, state) `를 통해 mutation을 감지할 수 있습니다. 감지해서 처음에는 initDraw, 그 다음에는 draw로 그림을 그립니다. 
+6) 이 처리를 하는 이유는 뭘까요? 우리가 받는 데이타는 string입니다. 서버로 부터 객체를 받는 것이 아니죠. 그렇기 때문에 string화 된 데이타를 new Date를 통해 객체로 만들어 주어야 합니다. 
+7) 그림을 그리기 앞서 새로운 데이터에 따라 범위 설정을 다시 해줍니다. 그 후 
+8) this.line에 data 인자를 넣어 새로운 그림을 만듭니다. 
+
+
+ > 참고 : line 그리기
+
+D3.js는 유연하므로 path를 이용한 라인은 3가지의 방법으로 그릴 수 있습니다. 
+ 
+ ----
+
+1)svg.append("path").datum(data).attr("d", line)
+2)svg.append("path").data([data]).attr("d", line) 
+3)svg.append("path").attr("d", this.line(data)).attr("class", "line")
+
+ ----
+ 
+#### MEVN/4장/sensor/src/views/SensorChart.js  
+위의 완성된 Chart.vue를 쓸 부모 컴포넌트입니다. 
+```html
+<template>
+  <div> 
+    <div v-for="c in charList" class="chartWrap card">
+      <h2>{{c.text}}</h2> 
+      <Chart :_key="c.value" :color = "c.value" :key="c.value"></Chart>
+    </div> 
+  </div>
+</template>
+
+<script>
+// @ is an alias to /src
+import Chart from '@/components/Chart.vue'
+
+export default {
+  name: 'SensorChart',
+  components: {
+    Chart
+  }, 
+    data() {
+      return { 
+        charList : [ 
+           {"color" : "red", "value": "temp", "text" : "온도"}, 
+           {"color" : "green", "value": "wv", "text" : "풍속"}, 
+           {"color" : "blue", "value": "humi", "text" : "습도"}, 
+        ]
+      }
+    },
+    mounted() { 
+    },
+    methods: { 
+    }  
+}
+</script>
+<style>
+.chartWrap{
+  display:inline-block;
+}
+.chartWrap h2{
+    border-bottom: 2px solid #aaa;
+    padding-bottom: 10px;
+    margin: 0;
+
+
+} 
+</style>
+```
+
+### 4.7  실시간 센서시각화사이트 : 소켓플러그인제작 
+
+#### MEVN/4장/sensor/src/plugins/socketPlug.js 
+우리는 실시간 통신을 합니다. 그러기 위해선 socket.io-client를 client에 설정을 해놔야죠. 그러기 위한 플러그인을 제작합니다. 
+```js
+import Vue from 'vue';
+import io from 'socket.io-client';
+export default {
+    install(Vue, {
+        host,
+        port
+    }) {
+        const socketClient = io(`${host}:${port}`);
+        Vue.prototype.$socket = socketClient;
+        console.log("complete")
+    }
+}
+```
+#### MEVN/4장/sensor/src/main.js 
+```js
+import Vue from 'vue'
+import App from './App.vue'
+import router from './router'
+import store from './store'
+import socketPlugin from './plugins/socketPlug.js'
+import config from './config' 
+Vue.config.productionTip = false
+
+Vue.use(socketPlugin, {host : config.host, port : config.port}) 
+new Vue({
+  router,
+  store,
+  render: h => h(App)
+}).$mount('#app')
+```
+그 이후 위의 예처럼 Vue.use로 socketPlugin을 vue 인스턴스에 할당하면 됩니다. 
+
+#### MEVN/4장/sensor/src/router.js 
+```js
+import Vue from 'vue'
+import Router from 'vue-router'
+import SensorChart from './views/SensorChart.vue'  
+Vue.use(Router)
+
+export default new Router({
+  mode: 'history',
+  base: process.env.BASE_URL,
+  routes: [
+    {
+      path: '/',
+      name: 'SensorChart',
+      component: SensorChart
+    },
+    {
+      path: '/map',
+      name: 'map', 
+      component: () => import('./views/Map.vue')
+    },{
+      path: '/number',
+      name: 'number', 
+      component: () => import('./views/Number.vue')
+    },{ 
+      path: '*',
+      name: '404', 
+      component: () => import('./views/Lost.vue')
+
+    }
+  ]
+})
+
+```
+참고로 router 구성은 위와 같습니다. 먼저 우리가 할당한 라우터 말고 다른 곳을 들어가면 lost페이지가 뜨게끔 마지막에 *으로 404로 할당한 것을 주의깊게 보시면 됩니다. 
+
+완성된 모습입니다. sensor에 관한 차트가 아름답게 animation화 되어 움직이는 것을 볼 수 있습니다. 
+
+![센서차트](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_센서.gif) 
+
+ 
