소중한 것을 잃어버린.. 나

--- a/plan/알고리즘복습.md
+++ b/plan/알고리즘복습.md
@@ -41,7 +41,6 @@ d[i][j] = min(min(d[i - 1][j - 1], d[i - 1][j]), d[i][j - 1]) + 1;
 ## 컬러링북
 1. 문제를 잘보자
 2. BFS
- 
 
 ## 4단고음
 1. *++라는 형태를 만들어야 한다.
@@ -84,3 +83,56 @@ https://programmers.co.kr/learn/courses/30/lessons/1838
 https://programmers.co.kr/learn/courses/30/lessons/1839
 (m - 1) * 54 괄호처리하는 것을 주의하자. 
  
+## 뉴스 클러스터링 
+1. Set 그리고 정수변환을 신경쓰자. 
+```js
+const lower = str => str.toLowerCase();
+const init = str => {
+    let a = []
+    const pattern = /[a-z]{2}/;  
+    for (let i = 0; i < str.length - 1; i++) {
+        //const partial_str = str[i] + str[i + 1]  
+        const partial_str = str.substr(i, 2)
+        if(pattern.test(partial_str)){ 
+            a.push(partial_str) 
+        } 
+    }   
+    return a;
+}
+
+function solution(str1, str2) {
+    str1 = init(lower(str1))
+    str2 = init(lower(str2)) 
+    const _set = new Set([...str1, ...str2])
+    let union =0; 
+    let intersection = 0; 
+    _set.forEach(item =>{
+        const has1 = str1.filter(x => x === item).length; 
+        const has2 = str2.filter(x => x === item).length; 
+        union += Math.max(has1, has2)
+        intersection +=  Math.min(has1, has2)
+    })
+    return union === 0 ? 65536 : ~~(intersection / union * 65536)   
+}
+```
+
+## 셔틀버스
+https://programmers.co.kr/learn/courses/30/lessons/17678
+1. 09:40 ... 09:50 이라는 예외사항도 있다. 
+2. 시간 sort는 반드시 변환을 해서 하자. 
+
+## 프렌즈 4블록
+https://programmers.co.kr/learn/courses/30/lessons/17679?language=javascript
+1. 90도 회전
+```js
+for(let i = 0; i < cols; i++){
+    for(let j = 0; j < rows; j++){ 
+        matrix[i][j] = board[rows - j - 1][i];
+    }
+} 
+```
+2. 매트릭스 생성과 string 처리
+```js
+board = board.map(line =>line.split(""))
+let matrix = Array.from(new Array(cols), () => Array.from(new Array(rows), () => 0)); 
+```
