--- a/plan/알고리즘복습.md
+++ b/plan/알고리즘복습.md
@@ -1,9 +1,4 @@
-
 힘든일의 연속이다. 마음이 강해져야 한다.
-
-
-## 공지
-프로그래머스는 테스트하기가 어렵다. 
 
 ## 최소공배수
 a * (b /gcd(a, b))로 큰 값을 미리 나눠서 오버플로우를 피할 수 있다.
@@ -43,10 +38,18 @@ d[i][j] = min(min(d[i - 1][j - 1], d[i - 1][j]), d[i][j - 1]) + 1;
 2. BFS
 
 ## 4단고음
+https://programmers.co.kr/learn/courses/30/lessons/1831?language=cpp
+
 1. *++라는 형태를 만들어야 한다.
 2. n 부터 시작해서 1로 가면서 n % 3 == 0이라면 나눈다. *이 발생 == +의 stack을 2개 제거 / 그외에는 +의 stack을 증가 + n - 1
 3. 탐색불가한 경우 : +의 stack이 40이 넘어가는 경우이다. pow(3, 20) 이면 int의 최대 범위를 초과한다. 그 경우도 생각해주면 된다. 
 4. n == 1일 때 종료 return 1
+5. map을 사용하는 이유는 그냥 배열로 하면 공간복잡도가 너무 증가하기 때문이다. 
+6. 거꾸로 간다고 생각하면 쉽다. 
+7. map을 check할 때 if(mp.count({pcnt, n})) return mp[{pcnt, n}]; 가 더 효율이 높다. 이걸 안할경우 시간초과가 걸린다. 
+
+## 유사문제 : 백준 - 1로만들기
+https://www.acmicpc.net/problem/1463
 
 ## 보행자 천국
 https://programmers.co.kr/learn/courses/30/lessons/1832
@@ -136,3 +139,42 @@ for(let i = 0; i < cols; i++){
 board = board.map(line =>line.split(""))
 let matrix = Array.from(new Array(cols), () => Array.from(new Array(rows), () => 0)); 
 ```
+
+## 실패율
+배열을 이용할 생각. 
+```js
+let visited = Array.from(new Array(N + 1), () => 0);
+let notClear = Array.from(new Array(N + 1), () => 0);
+stages.forEach(e =>{
+    for(let i = 1; i <= e; i++){
+        visited[i]++;
+    }
+    notClear[e]++; 
+})
+``` 
+
+## 길찾기 게임
+root를 중심으로 tree 만드는 것을 생각하자. 
+```js
+const makeTree = (root, nodes) =>{
+    if(nodes.length == 0)return; 
+    const left = nodes.filter(e => root.x > e.x)
+    const right = nodes.filter(e => root.x < e.x)
+    if(left){
+        root.left = left[0];
+        makeTree(left[0], left)
+    }
+    if(right){
+        root.right = right[0];
+        makeTree(right[0], right)
+    } 
+    return root; 
+} 
+```
+
+## 무지의 먹방라이브
+https://programmers.co.kr/learn/courses/30/lessons/42891?language=javascript
+
+k를 중심으로가 아닌 foodTimes의 길이를 중심으로 하면 효율적으로 할 수 있다. 
+시간초과가 뜬다면 시간복잡도를 중심으로 반복문의 효율성을 따져보자. map을 사용한다고 해서
+효율성이 감소하지는 않는다. 
