--- a/plan/알고리즘복습.md
+++ b/plan/알고리즘복습.md
@@ -51,6 +51,19 @@ https://programmers.co.kr/learn/courses/30/lessons/1831?language=cpp
 ## 유사문제 : 백준 - 1로만들기
 https://www.acmicpc.net/problem/1463
 
+```c++
+dp[1] = 0;
+for(int i = 2; i <= n; i++){
+    dp[i] = dp[i - 1] + 1;
+    if(i % 2 == 0){
+        dp[i] = min(dp[i], dp[i / 2] + 1);
+    }
+    if(i % 3 == 0){
+        dp[i] = min(dp[i], dp[i / 3] + 1);
+    }
+}
+cout << dp[n] << endl; 
+``` 
 ## 보행자 천국
 https://programmers.co.kr/learn/courses/30/lessons/1832
 1. 반복적 동적계획법으로 한다. 
@@ -61,9 +74,7 @@ https://programmers.co.kr/learn/courses/30/lessons/1832
 https://programmers.co.kr/learn/courses/30/lessons/1833
 1. x좌표끼리 Or y좌표끼리는 같지 않는다. 
 2. 모조리 다 구해준다. for k = j ~ 0 중 i ~ k ~ j가 있다면 false
-
-## 신비로운 유적탐험[복습필요]
-
+ 
 ## 단체사진찍기
 https://programmers.co.kr/learn/courses/30/lessons/1835
 1. map<char, int> pos;을 이용해서 하면 된다. 
@@ -78,13 +89,9 @@ https://programmers.co.kr/learn/courses/30/lessons/1836
 https://programmers.co.kr/learn/courses/30/lessons/1837
 플로이드와샬인줄 알았는데 DP.. 
 
-## 몸짱 트레이너[복습필요]
-https://programmers.co.kr/learn/courses/30/lessons/1838
-...
-
 ## 튜브의 소개팅[복습필요]
 https://programmers.co.kr/learn/courses/30/lessons/1839
-(m - 1) * 54 괄호처리하는 것을 주의하자. 
+(m - 1) * 54 괄호처리하는 것을 주의하자. floodfill
  
 ## 뉴스 클러스터링 
 1. Set 그리고 정수변환을 신경쓰자. 
