--- a/알고리즘공부.md
+++ b/알고리즘공부.md
@@ -2,4 +2,4 @@
 배열은 인덱스에 해당하는 원소를 빠르게 접근해야 할 때, 그리고 마치 창고처럼 데이터를 쌓아두고 싶을 때 유용하게 활용할 수 있습니다. 만약 데이터의 삽입/삭제가 빈번한 상황이면 배열이 비효율적입니다. 사실 거의 대부분의 문제에서, 일단 입력값을 저장해놓고 시작하는 일이 많기 때문에 배열이 쓰입니다. 
 
 # 연결리스트
-연결 리스트는 임의의 위치에 원소를 추가하는 것, 그리고 제거하는 것 모두 O(1)O(1)입니다. 여기서 주의해야 하는게, 해당 임의의 위치에 일단 도달을 하고 난 후에 O(1)O(1)이라는 의미입니다. 만약 시작 위치만 주어진 후에 kk번째 위치에 원소를 추가해라 라는 명령이 들어오면 배열과 다르게 kk번째 위치를 O(1)O(1)에 찾아갈 수가 없기 때문에 이것은 O(1)O(1)에 수행할 수 없고 평균적으로 O(N)O(N)이 걸립니다.
+연결 리스트는 임의의 위치에 원소를 추가하는 것, 그리고 제거하는 것 모두 O(1)입니다. 여기서 주의해야 하는게, 해당 임의의 위치에 일단 도달을 하고 난 후에 O(1)이라는 의미입니다. 만약 시작 위치만 주어진 후에 kk번째 위치에 원소를 추가해라 라는 명령이 들어오면 배열과 다르게 kk번째 위치를 O(1)에 찾아갈 수가 없기 때문에 이것은 O(1)에 수행할 수 없고 평균적으로 O(N)이 걸립니다.
