--- a/기상정보지원체계.md
+++ b/기상정보지원체계.md
@@ -10,7 +10,7 @@
 - 바람장미, 차트, 지도, 테이블 컴포넌트제작 
 - 코드리팩토링 / 함수형 프로그래밍화
 - 기지별 커스터마이징 모듈 개발
-- 메모이제이션알고리즘적용(80%성능향상)
+- 서버요청최소화 세그먼트기법적용(67% 이상 성능향상)
 - HA에 따른 A & B 파일 / DB 부분적 동기화 
 - 단방향 시리얼 통신모듈 개발
 - 관리자페이지 구축(업로드 / 입력 / 실시간자료, 로그조회) 
@@ -40,7 +40,10 @@
 ### 차트
 ![차트](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/portfolio/3.jpg)
 
-시각적으로 기상데이터를 시계열화해서 보여줍니다. 센서데이타에 메모이제이션을 적용해 서버에 요청을 최소화했으며 재사용가능한 컴포넌트로 제작했습니다. 
+시각적으로 기상데이터를 시계열화해서 보여줍니다. 센서데이타를 프론트엔드에서 세그먼트로 나눠 서버에 요청을 최소화했으며 재사용가능한 컴포넌트로 제작했습니다. 
+
+10초마다 쌓이는 메인, 서브 활주로로 오는 센서 데이터, 1시간에 17280, 5시간에 86400개라는 어마어마한 양이였다. 이러한 데이터를 가지고 1시간이면 1시간, 2시간이면 2시간 등으로 차트를 시간단위로 표출했어야 했는데  기존에 클릭시에 요청을 해서 데이타를 가져오고 차트를 그리는 작업 때문에 버버벅 거리는 트러블슈팅이 있었고 이를 미리 5시간의 데이터를 가져와 시간당 5개의 세그먼트로 나눠서 프론트엔드에서 처리할 수 있도록 만들어 네트워크 요청을 줄여서 그 이슈를 해결한 사례가 있습니다.
+
 
 ### 작전화면
 ![작전](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/portfolio/11.jpg) 
